# etcd

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  queue.md  test.py
i18n/cn/: etcd.ftl
i18n/en/: etcd.ftl
i18n/ru/: etcd.ftl
src/: cli.rs  cluster.rs  kv.rs  lib.rs  main.rs  peer.rs  queue.rs
src/etcdpb/: authpb.rs  etcdserverpb.rs  mod.rs  mvccpb.rs  v3electionpb.rs  v3lockpb.rs
src/srv/: kv.rs  lease.rs  maintenance.rs  mod.rs  parking.rs  watch.rs
tests/: README.md  client.rs  namespace.rs  queue.rs  testing.rs
