[package]
name = "etcd"
version = "0.14.3"
authors = ["The etcd-client Authors <davidli2010@foxmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "An etcd v3 API client"
repository = "https://github.com/etcdv3/etcd-client.git"
homepage = "https://github.com/etcdv3/etcd-client"
documentation = "https://docs.rs/etcd-client/"
keywords = ["etcd", "v3", "api", "client", "async"]

[dependencies]
slog = { version = "2.7.0", features=["default"] }
sloggers = "2.2.0"
tonic = "^0.13"
prost = "^0.13"
tokio = { version = "^1.44", features = ["full"] }
tokio-stream = "^0.1"
dns-lookup = "2.0.4"


clap = "4.5.32"
clap-serde-derive = "0.2.1"

lazy_static = "1.5.0"
i18n-embed-fl = "^0.9"
i18n-embed = { version = "^0.15", features = ["fluent-system", "desktop-requester"]}
rust-embed = "8.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "^0.9"

#shims = {git = "https://github.com/vkrinitsyn/shim.git"}
uuid = { version = "1.16.0", features = ["v4"] }
#rsa = "^0.9"
#rand = "0.8.5"
opentelemetry_sdk = { version = "^0.29", features = ["rt-tokio", "tracing"], optional = true }
opentelemetry = { version = "^0.29", optional = true }

[features]
default = []
tracer = ["dep:opentelemetry", "dep:opentelemetry_sdk"]

#tls = ["tonic/tls"]
#tls-openssl = ["openssl", "hyper-openssl", "hyper", "hyper-util"]
#tls-openssl-vendored = ["tls-openssl", "openssl/vendored"]
#tls-roots = ["tls", "tonic/tls-roots"]
#pub-response-field = ["visible"]


[dev-dependencies]
tokio = { version = "^1.44", features = ["full"] }
etcd-client = {version = "0.14.1", features = []}

[build-dependencies]
tonic-build = { version = "^0.13", default-features = false, features = ["prost"] }

[package.metadata.docs.rs]
features = ["tls", "tls-roots"]
rustdoc-args = ["--cfg", "docsrs"]
